@@ -164,6 +164,9 @@
 	Fixed centering title of attributes change dialog (cp normal mode command)
 	for non-ascii file names.
 
+	Fixed turning quickview into explore view when preview command doesn't
+	contain macros.  Was broken since 0.8.
+
 0.9-beta to 0.9
 
 	Escape $ and ` in %" macros on *nix systems.  Thanks to filterfalse.
